--- a/menu.html
+++ b/menu.html
@@ -46,6 +46,11 @@
             >Exportar Dados</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'cliente_list' %}"
+            >Foto</a
+          >
+        </li>
         <li>
           <a class="nav-link" href="http://localhost:8501" target="_blank">Mapa</a>
         </li>
